--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0",
+    "react-router-dom": "6.4",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.0-rc.6",
     "styled-system": "^5.1.5",
@@ -38,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
